--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,11 +1,12 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    background: url('../Images/website\ pattern-03.svg') no-repeat center center fixed;
+    background: url('../Img/website\ pattern-03.svg') no-repeat center center fixed;
     background-size: cover;
     color: #fff;
+    word-spacing: 1px;
+    line-height: 1.5em;
 }
-
 
 header {
     position: relative;
@@ -14,10 +15,12 @@ header {
     padding-bottom: 20px;
     background: rgba(38, 37, 37, 0.815);
 }
+
 nav{
     width: 100%;
     /* padding: 0 20px; */
     background-color: #fff;
+    height: 60px;
 }
 nav div .nav-container{
     width: 80%;
@@ -116,6 +119,7 @@ nav input:hover{
         justify-content: space-around;
         align-items: center;
     }
+
     nav ul {
         gap: 20px;
     }
@@ -139,25 +143,163 @@ nav input:hover{
 }
 
 /* main */
-section{
-    
+main{
+    background-color: #fff;
 }
+section{
+    background-color: #862d2d;
+}
+
 .mie{
     background-color: #fff;
     display: flex;
     color: #242323;
     padding: 20px 60px;
 }
+
 .mie h1{
     text-decoration: none;
     width: 35%;
     border-right: #a33131 4px solid;
     padding-right: 5px;
     text-align: center;
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
+
 .mie p{
     padding-left: 20px;
 }
+
+/* ieee */
+.egypt_section{
+    background-color: #fff;
+    color: #333;
+    padding: 20px 60px;
+}
+
+.ieee{
+    display: flex;
+    align-items: center;
+}
+
+.ieee img{
+    width:90%;
+}
+
+.ieee :first-child{
+    padding-right: 80px;
+}
+
+
+.ieee_yp{
+    display: flex;
+    align-items: center;
+}
+
+.ieee_yp img{
+    width:100%;
+}
+
+.ieee_yp :nth-child(2){
+    padding-left: 80px;
+}
+
+/* meet our board */
+.meet_our_board{
+    background-image: url(../Img/website\ pattern-03.svg);
+    background-size: cover;
+    color: #fff;
+}
+
+#meet_our_board{
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    padding-bottom: 20px;
+    background: rgba(38, 37, 37, 0.815);
+}
+
+.text{
+    /* text-align: center; */
+    padding-top: 20px;
+}
+
+.leads{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+}
+.lead{
+    width: 20%;
+    background-color: #fff;
+    color: #333;
+    border-radius: 15px;
+    margin: 30px 20px;
+
+}
+
+.lead img{
+    width: 275px;
+    height: 198px;
+    object-fit: cover;
+    /* object-position: center; */
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.lead .icon img{
+    width: 30px;
+    color: #333;
+} 
+
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .lead {
+        width: 25%;
+    }
+}
+
+@media (max-width: 992px) {
+    .lead {
+        width: 30%;
+    }
+}
+
+@media (max-width: 768px) {
+    .lead {
+        width: 45%;
+    }
+}
+
+@media (max-width: 576px) {
+    .lead {
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    .text h1 {
+        font-size: 1.5rem;
+    }
+
+    .lead h2 {
+        font-size: 1.2rem;
+    }
+
+    .lead p {
+        font-size: 1rem;
+    }
+
+    .lead .icon img {
+        width: 25px;
+    }
+}
+
+/* ----- */
+
 /* =============Footer======== */
 footer{
     font-family: 'Helvetica Neue', Arial, sans-serif;
