--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -5,19 +5,9 @@
 }
 body {
     font-family: 'Roboto', sans-serif;
-    background: url('../Images/website\ pattern-03.svg') no-repeat center center fixed;
+    background: url('../Img/website\ pattern-03.svg') no-repeat center center fixed;
     background-size: cover;
 }
-
-/* .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: hsla(0, 0%, 0%, 0.423);
-    z-index: 1;
-} */
 
 header{
     position: relative;
@@ -32,6 +22,7 @@ nav{
     /* padding: 0 20px; */
     background-color: #fff;
 }
+
 nav div .nav-container{
     width: 80%;
     display: flex;
@@ -152,6 +143,7 @@ nav input:hover{
         padding: 0;
     }
 }
+
 
 /* =======projects section========= */
 
