hot fix from `front` to `project_form`

--- a/backend/project_form/templates/front/home.html
+++ b/backend/project_form/templates/front/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../Awesome/all.css" />
     <link rel="stylesheet" href="../Awesome/fontawesome.css" />
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
-    <script src="../main.js" defer></script>
+    <script src="{%static 'js/main.js' %}" defer></script>
     <title>Home</title>
     
 </head>
@@ -277,7 +277,7 @@
             <div class="footer-column">
               <h3>Quick Links</h3>
               <ul>
-                <li><a href="/front">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="./about">About</a></li>
                 <li><a href="./competition">Competition</a></li>
                 <li><a href="./competition">Projects</a></li>
