--- a/backend/project_form/templates/front/about.html
+++ b/backend/project_form/templates/front/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../Awesome/all.css">
     <link rel="stylesheet" href="../Awesome/fontawesome.css">
     <title>About Us</title>
-    <script src="../main.js" defer></script>
+    <script src="{%static 'js/main.js' %}" defer></script>
   </head>
   <body>
     <!--============Header============= -->
@@ -21,7 +21,7 @@
           </div>
           <ul class="nav-links">
             <li>
-              <a href="/front" data-page="./front">Home</a>
+              <a href="/home" data-page="./front">Home</a>
             </li>
             <li>
               <a href="./about" data-page="../about"
@@ -312,7 +312,7 @@
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/front">Home</a></li>
+              <li><a href="/home">Home</a></li>
               <li><a href="./about">About</a></li>
               <li><a href="./competition">Competition</a></li>
               <li><a href="./projects">Projects</a></li>
