--- a/backend/project_form/templates/front/contact.html
+++ b/backend/project_form/templates/front/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../Awesome/fontawesome.css" />
     <title>Contact Us</title>
     <link rel="stylesheet" href="{% static 'css/contact.css' %}" />
-      <script src="../main.js" defer></script>
+      <script src="{%static 'js/main.js' %}" defer></script>
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
           </div>
           <ul class="nav-links">
             <li>
-              <a href="/front" data-page="./front">Home</a>
+              <a href="/home" data-page="./front">Home</a>
             </li>
             <li>
               <a href="./about" data-page="../about"
@@ -95,7 +95,7 @@
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/front">Home</a></li>
+              <li><a href="/home">Home</a></li>
               <li><a href="./about">About</a></li>
               <li><a href="./competition">Competition</a></li>
               <li><a href="./competition">Projects</a></li>
