--- a/backend/project_form/templates/front/projects.html
+++ b/backend/project_form/templates/front/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/projects.css' %}" />
     <title>Projects</title>
-    <script src="../main.js" defer></script>
+    <script src="{%static 'js/main.js' %}" defer></script>
   </head>
   <body>
     <!-- =========header========= -->
@@ -18,7 +18,7 @@
           </div>
           <ul class="nav-links">
             <li>
-              <a href="/front" data-page="./front">Home</a>
+              <a href="/home" data-page="./front">Home</a>
             </li>
             <li>
               <a href="./about" data-page="../about"
@@ -120,7 +120,7 @@
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/front">Home</a></li>
+              <li><a href="/home">Home</a></li>
               <li><a href="./about">About</a></li>
               <li><a href="./competition">Competition</a></li>
               <li><a href="./projects">Projects</a></li>
