--- a/backend/project_form/templates/front/about.html
+++ b/backend/project_form/templates/front/about.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/about.css' %}" />
+    <link rel="stylesheet" href="../CSS/about.css" />
     <!-- Font Awesome links -->
     <link rel="stylesheet" href="../Awesome/all.css">
     <link rel="stylesheet" href="../Awesome/fontawesome.css">
     <title>About Us</title>
-    <script src="{%static 'js/main.js' %}" defer></script>
+    <!-- <script src="{%static 'js/main.js' %}" defer></script> -->
+    <script src="../main.js" defer></script>
   </head>
   <body>
     <!--============Header============= -->
@@ -17,40 +17,40 @@
       <nav id="nav-placeholder">
         <div class="nav-container">
           <div class="logo">
-            <img src="{% static 'img/MIE-logo.png' %}" alt="Logo" />
+            <img src="../Img/MIE-logo.png" alt="Logo" />
           </div>
           <ul class="nav-links">
             <li>
-              <a href="/home" data-page="./front">Home</a>
+              <a href="../HTML/home.html" data-page="../HTML/home.html">Home</a>
             </li>
             <li>
-              <a href="./about" data-page="../about"
-                >About Us</a
-              >
+              <a href="../HTML/about.html" data-page="../HTML/about.html">About Us</a>
             </li>
             <li>
-              <a href="./projects" data-page="../projects"
-                >Projects</a
-              >
+              <a href="../HTML/projects.html" data-page="../HTML/projects.html">Projects</a>
             </li>
             <li>
-              <a href="./contact" data-page="../contact"
-                >Contact Us</a
-              >
+              <a href="../HTML/contact.html" data-page="../HTML/contact.html">Contact Us</a>
             </li>
           </ul>
           <div class="nav__button" id="nav-button">
             <input type="submit" value="Registration" />
           </div>
+          <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
         </div>
       </nav>
-
+    
       <div class="landing">
         <div class="landing-text">
           <h1>About Us.</h1>
         </div>
       </div>
     </header>
+    
 
     <!-- main -->
     <main>
@@ -67,25 +67,6 @@
           </p>
         </div>
       </section>
-      <section>
-        <div>
-          <div class="mission">
-            <div class="icon"><i class="fas fa-bullseye"></i></div>
-            <h2>Mission</h2>
-            <p>
-              To be the leading force in fostering innovation within engineering
-              'Made in Egypt' aims to inspire and equip a generation of senior
-              students with the creativity and excellence to exceed market
-              expectations
-            </p>
-          </div>
-          <div class="vision">
-            <div class="icon"><i class="fa-solid fa-eye"></i></div>
-            <h2>Vision</h2>
-            <p>To be the leading force in fostering innovation within engineering 'Made in Egypt' aims to inspire and equip a generation of senior students with the creativity and excellence to exceed market expectations</p>
-          </div>
-        </div>
-      </section>
 
       <section class="egypt_section">
         <div class="ieee">
@@ -94,12 +75,13 @@
             <p>IEEE is the Institute of Electrical and Electronics Engineers. It's a non-profit organization Built by a group of engineers who recognized the importance of spreading knowledge and technology in the world</p>
           </div>
           <div class="img">
-            <img src="{% static 'img/IEEE YP.png' %}"$3>
+            <img src="../Img/EG Section.png" alt="">
           </div>
         </div>
+
         <div class="ieee_yp">
           <div class="img">
-            <img src="{% static 'img/IEEE YP.png' %}"$3>
+            <img src="../Img/IEEE YP.png" alt="">
           </div>
           <div class="text">
             <h2>IEEE Young Professionals</h2>
@@ -108,6 +90,36 @@
         </div>
       </section>
 
+      <section>
+        <div class="about_us">
+          <div class="mission">
+            <div class="icon">
+              <i class="fas fa-bullseye"></i>
+              <h2>Mission</h2>
+            </div>
+            <div class="text">
+              <p>
+                To be the leading force in fostering innovation within engineering
+                'Made in Egypt' aims to inspire and equip a generation of senior
+                students with the creativity and excellence to exceed market
+                expectations
+              </p>
+            </div>
+          </div>
+          <div class="vision">
+            <div class="icon">
+              <i class="fa-solid fa-eye"></i>
+              <h2>Vision</h2>
+            </div>
+          <div class="text">
+            <p>To be the leading force in fostering innovation within engineering 'Made in Egypt' aims to inspire and equip a generation of senior students with the creativity and excellence to exceed market expectations</p>
+          </div>
+          </div>
+        </div>
+      </section>
+
+
+
       <section class="meet_our_board">
         <div id="meet_our_board">
           <div class="text">
@@ -115,171 +127,91 @@
           </div>
           <div class="leads">
             <div class="lead">
-              <img src="{% static 'img/Lead/Seif Mostafa.jpeg' %}"$3>
-              <h2>Seif Mostafa</h2>
-              <p>MIE Chairman</p>
-              <div class="icon">
-                <a href="#"
-                  ><img
-                    src="../Img/socail icons/linkedin.png"
-                    alt="linkedin"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
+              <img src="../Img/Lead/Seif Mostafa.png" alt="">
+              <div class="text">
+                <h2>Seif Mostafa</h2>
+                <p>Chairman</p>
               </div>
             </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Mohamed Fahmy.jpeg' %}"$3>
-            <h2>Mohmed Fahmy</h2>
-            <p>MIE Vice Chairman</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Mohamed Fahmy.jpeg" alt="" class="img">
+              <!-- <img src="{% static 'img/Lead/Mohamed Fahmy.jpeg' %}"$3> -->
+              <div class="text">
+                <h2>Mohmed Fahmy</h2>
+                <p>Vice Chairman</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Mahmoud elbahrawy.jpeg' %}"$3>
-            <h2>Mahmoud elbahrawy</h2>
-            <p>Treasurer</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Ziad.png" alt="">
+              <div class="text">
+                <h2>Ziad Nasser</h2>
+                <p>Secretary</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Ziad.jpeg' %}"$3>
-            <h2>Ziad Nasser </h2>
-            <p>Secretary</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Mahmoud elbahrawy.png" alt="">
+              <!-- <img src="{% static 'img/Lead/Mahmoud elbahrawy.jpeg' %}"$3> -->
+              <div class="text">
+                <h2>Mahmoud Elbahrawy</h2>
+                <p>Treasurer</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Seif Mostafa.jpeg' %}"$3>
-            <h2>Sara Jakoub</h2>
-            <p>Sponsorship Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Sara.png" alt="">
+              <div class="text">
+                <h2>Sara Jakoub</h2>
+                <p>Sponsorship Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Eman.jpeg' %}"$3>
-            <h2>Eman Elsharkawy</h2>
-            <p>Operations and Materials Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/eman (1).png" alt="">
+              <div class="text">
+                <h2>Eman Elsharkawy</h2>
+                <p>Operations and Materials Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/WhatsApp Image 2024-02-18 at 1.37.57 PM.jpeg' %}"$3>
-            <h2>Ahmed Ezzat </h2>
-            <p>Registration Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Ahmed Ezzat.png" alt="">
+              <div class="text">
+                <h2>Ahmed Ezzat</h2>
+                <p>Registration Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/IMG-20230626-WA0140 - Alaa Kamal.jpg' %}"$3>
-            <h2>Alaa Kamal</h2>
-            <p>Competition Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Alaa Kamal.png" alt="">
+              <div class="text">
+                <h2>Alaa Kamal</h2>
+                <p>Competition Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Abdelrahman.jpeg' %}"$3>
-            <h2>Abdelrahman Sepaey</h2>
-            <p>HR Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Abdelrahman.jpeg" alt="">
+              <div class="text">
+                <h2>Abdelrahman Sepaey</h2>
+                <p>HR Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Nour Basel.jpg' %}"$3>
-            <h2>Nour Basel</h2>
-            <p>Multimedia Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Nour_Basel-removebg-preview (1).png" alt="">
+              <div class="text">
+                <h2>Nour Basel</h2>
+                <p>Multimedia Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Omar Alsaqaan.jpeg' %}"$3>
-            <h2>Omar Elsaqaan</h2>
-            <p>PR Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/Omar Alsaqaan.png" alt="">
+              <div class="text">
+                <h2>Omar Elsaqaan</h2>
+                <p>PR Lead</p>
+              </div>
             </div>
-          </div>
-          <div class="lead">
-            <img src="{% static 'img/Lead/Mahmoud Rafaat.jpeg' %}"$3>
-            <h2>Mahmoud Raafat</h2>
-            <p>Marketing Lead</p>
-            <div class="icon">
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+            <div class="lead">
+              <img src="../Img/Lead/amina (1).png" alt="">
+              <div class="text">
+                <h2>Amina Elhendawy</h2>
+                <p>Marketing Lead</p>
+              </div>
             </div>
-          </div>
           </div>
         </div>
       </section>
@@ -312,40 +244,40 @@
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/home">Home</a></li>
-              <li><a href="./about">About</a></li>
-              <li><a href="./competition">Competition</a></li>
-              <li><a href="./projects">Projects</a></li>
-              <li><a href="./contact">Contact</a></li>
+              <li><a href="../HTML/home.html">Home</a></li>
+              <li><a href="../HTML/about.html">About</a></li>
+              <li><a href="../HTML/competition.html">Competition</a></li>
+              <li><a href="../HTML/projects.html">Projects</a></li>
+              <li><a href="../HTML/contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h3>Follow Us</h3>
             <div class="social-links">
               <a href="#"
-                  ><img
-                    height="30"
-                    width="30"
-                    src="{% static 'img/socail icons/facebook.png' %}"
-                    alt="facebook"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
-                <a href="#"
-                  ><img
-                    height="30"
-                    width="30"
-                    src="{% static 'img/socail icons/instagram.png' %}"
-                    alt="instagram"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
-                <a href="#"
-                  ><img
-                    height="30"
-                    width="30"
-                    src="{% static 'img/socail icons/linkedin.png' %}"
-                    alt="linkedin"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/facebook.png"
+                  alt="facebook"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/instagram.png"
+                  alt="instagram"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
             </div>
           </div>
         </div>
@@ -358,5 +290,7 @@
 
     <!-- Font Awesome CDN for social media icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+    <script src="../main.js"></script>
   </body>
 </html>
