--- a/backend/project_form/static/css/about.css
+++ b/backend/project_form/static/css/about.css
@@ -205,7 +205,8 @@ section{
 }
 
 .ieee img{
-    width:90%;
+    /* width:90%; */
+    width: 200px;
 }
 
 .ieee :first-child{
@@ -219,11 +220,14 @@ section{
 }
 
 .ieee_yp img{
-    width:100%;
+    width:200px;
 }
 
 .ieee_yp :nth-child(2){
     padding-left: 80px;
+}
+.ieee_yp .text p{
+    padding: 0;
 }
 /* ========================== */
 
